--- a/css/style.scss
+++ b/css/style.scss
@@ -656,6 +656,12 @@ section {
 
     span {
       color: $blue;
+
+      a {
+        color: $blue;
+        font-style: bold;
+        font-weight: 600;
+      }
     }
   }
 }
